--- a/StyleMain.css
+++ b/StyleMain.css
@@ -54,6 +54,8 @@
 
         h3 
         {
+            margin-top: 10px;
+            margin-bottom: 10px;
             color: white;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
