--- a/StyleMain.css
+++ b/StyleMain.css
@@ -23,7 +23,7 @@
        
         body 
         {
-            background-image: url(images/indexbackground2b.jpg);
+            background-image: url(images/indexbackground.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }       
