--- a/StyleMain.css
+++ b/StyleMain.css
@@ -48,7 +48,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: lightsalmon;
+            color: #ABE188;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -56,7 +56,7 @@
         {
             margin-top: 10px;
             margin-bottom: 10px;
-            color: white;
+            color: #F7EF99;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -84,7 +84,7 @@
           img.picture
          {
              border: 3px ridge;
-             border-color: salmon;
+             border-color: #F78E69;
          }
 
         table 
@@ -98,7 +98,7 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 4px ridge;
-            border-color: lightsalmon;
+            border-color: #5D675B;
             border-radius: 12px;
             color: white;
             text-align: center;
