--- a/StyleMain.css
+++ b/StyleMain.css
@@ -48,7 +48,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #8BBF9F;
+            color: #F7A072;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -56,7 +56,7 @@
         {
             margin-top: 10px;
             margin-bottom: 10px;
-            color: #F5E0B7;
+            color: #8BBF9F;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
