--- a/StyleMain.css
+++ b/StyleMain.css
@@ -8,11 +8,11 @@
         }
         a:hover
         {
-            color:lightsalmon;
+            color:#F0B67F;
         }
         a:active
         {
-            color:orange;
+            color:#EEF5DB;
         }
        
         @font-face 
@@ -32,7 +32,7 @@
         {
             padding-left: 15px;
             padding-right: 15px;
-            color: lightsalmon;
+            color: #C7EFCF;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -40,7 +40,7 @@
         h1 
         {
             margin-top: 30px;
-            color: white;
+            color: #EEF5DB;
             font-family: spaceman;
         }
 
@@ -48,7 +48,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #F7A072;
+            color: #C7EFCF;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -56,7 +56,7 @@
         {
             margin-top: 10px;
             margin-bottom: 10px;
-            color: #8BBF9F;
+            color: #F0B67F;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -74,7 +74,7 @@
         {
              border: 4px solid;
              border-bottom: none;
-             border-color: #857E7B;
+             border-color: #FE5F55;
         }
 
          th
@@ -82,7 +82,7 @@
              border: 4px solid;
              border-top: none;
              border-bottom: none;
-             border-color: #857E7B;
+             border-color: #FE5F55;
         }
 
          img.title
@@ -107,7 +107,7 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 4px solid;
-            border-color: #857E7B;
+            border-color: #FE5F55;
             border-radius: 12px;
             color: white;
             text-align: center;
