--- a/StyleMain.css
+++ b/StyleMain.css
@@ -93,7 +93,7 @@
           img.picture
          {
              border: 3px solid;
-             border-color: #59344F;
+             border-color: #D6D1B1;
          }
 
         table 
