--- a/StyleMain.css
+++ b/StyleMain.css
@@ -40,7 +40,7 @@
         h1 
         {
             margin-top: 30px;
-            color: #EEF5DB;
+            color: white;
             font-family: spaceman;
         }
 
