--- a/StyleMain.css
+++ b/StyleMain.css
@@ -48,7 +48,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #D9DBBC;
+            color: #9CAFB7;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
