--- a/StyleMain.css
+++ b/StyleMain.css
@@ -26,7 +26,108 @@
             background-image: url(images/indexbackground.jpg);
             background-repeat: no-repeat;
             background-size: cover;
-        }       
+        } 
+        
+         input.button1
+        {  
+           -webkit-transition-duration: 0.4s; 
+           font-size:larger;
+           background-color: mediumpurple;
+           color: white;
+           border-radius: 8px;
+           border-style:solid;
+           border-color:mediumpurple;          
+           padding: 5px 7px;    
+           text-align:center;
+        }
+         
+        input.button2
+        {
+           -webkit-transition-duration: 0.4s; 
+           font-size:larger;
+           background-color: rebeccapurple;
+           color: white;
+           border-radius: 8px;
+           border-style:solid;
+           border-color:rebeccapurple;
+           padding: 5px 15px;
+           text-align:center;
+        }
+        
+        label
+        {
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+        
+        input.button1:hover
+        {
+            background-color:white;
+            color:mediumpurple;
+            border-style:solid;
+            border-color:mediumpurple;
+        }
+        input.button2:hover
+        {
+           background-color:white;
+           color:rebeccapurple;
+           border-style:solid;
+           border-color:rebeccapurple;           
+        }
+       input
+       {
+           margin-left: auto;
+           margin-right: auto;
+           border-color: rebeccapurple;
+           border-bottom-style: ridge;
+           border-width: medium;
+           font-family: Verdana, Helvetica, sans-serif;       
+        }
+        input.radial
+        {
+           margin-left: 5px;
+           margin-right: 15px; 
+        }
+        
+        select
+       {
+           margin-left: 5px;
+           margin-right: 5px;
+           font-family: Verdana, Helvetica, sans-serif;
+           border-color: rebeccapurple;
+           border-bottom-style: ridge;
+           border-width: medium;
+       }
+
+       textarea
+       {
+           margin-left:auto;
+           margin-right:auto;
+           width: 90%;
+           border-color: rebeccapurple;
+           border-bottom-style: ridge;
+           border-width: medium;
+           font-family: Verdana, Helvetica, sans-serif; 
+       }      
+      
+        form 
+        {
+            background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 25px;
+            width: 800px;
+            padding-left: 5px;
+            padding-right: 5px;
+            border: 2px ridge;
+            border-color: mediumpurple;
+            border-width:medium;
+            border-radius: 12px;
+            color: white;
+            text-align: center;
+            font-family: Verdana, Helvetica, sans-serif;
+        }      
 
         a 
         {
