--- a/StyleMain.css
+++ b/StyleMain.css
@@ -149,7 +149,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #E26D5A;
+            color: #D5C5C8;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
