--- a/StyleMain.css
+++ b/StyleMain.css
@@ -154,7 +154,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #D5C5C8;
+            color: #E6EFE9;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
