--- a/StyleMain.css
+++ b/StyleMain.css
@@ -22,7 +22,7 @@
         }
 
         p{           
-            color: #D5C5C8;
+            color: #E6EFE9;
             font-family: Verdana, Helvetica, sans-serif;
         }
        
