--- a/StyleMain.css
+++ b/StyleMain.css
@@ -30,7 +30,7 @@
         }
 
         p{           
-            color: #E6EFE9;
+            color: #D8D8F6;
             font-family: Verdana, Helvetica, sans-serif;
         }
        
@@ -167,7 +167,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #E6EFE9;
+            color: #D8D8F6;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
