--- a/StyleMain.css
+++ b/StyleMain.css
@@ -167,7 +167,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #D8D8F6;
+            color: #7AE7C7;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
