--- a/StyleMain.css
+++ b/StyleMain.css
@@ -59,11 +59,11 @@
         {  
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: #9CAFB7;
+           background-color: #8DA1B9;
            color: white;
            border-radius: 8px;
            border-style:solid;
-           border-color:#9CAFB7;          
+           border-color:#8DA1B9;          
            padding: 5px 7px;    
            text-align:center;
         }
@@ -89,9 +89,9 @@
         input.button1:hover
         {
             background-color:white;
-            color:#9CAFB7;
+            color:#8DA1B9;
             border-style:solid;
-            border-color:#9CAFB7;
+            border-color:#8DA1B9;
         }
         input.button2:hover
         {
@@ -148,7 +148,7 @@
             padding-left: 5px;
             padding-right: 5px;
             border: 2px solid;
-            border-color: #9CAFB7;
+            border-color: #8DA1B9;
             border-width:medium;
             border-radius: 12px;
             color: white;
