--- a/StyleMain.css
+++ b/StyleMain.css
@@ -17,6 +17,7 @@
             color: #D8D8F6;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
+            text-decoration:none;
         }
         @font-face 
         {
