--- a/StyleMain.css
+++ b/StyleMain.css
@@ -1,5 +1,25 @@
 ﻿      
-        a:visited,  a:active
+       h2, form 
+       {
+           color: #7AE7C7;
+           border-color: #7AE7C7;
+       }  
+       
+       td, th, table
+       {
+           border-color: #8DA1B9;
+       }  
+       
+       img.picture
+       {
+            border-color: #69585F;
+       }
+       h3.second 
+       {
+            color: #EF959D;
+       }
+       
+         a:visited,  a:active
         {
             color:#D8D8F6;        
         }
@@ -8,8 +28,7 @@
             color:#EF959D;
             border: solid 1px;
             border-radius: 4px
-        }       
-       
+        }             
          a 
         {
             padding-left: 15px;
@@ -144,7 +163,6 @@
             padding-left: 5px;
             padding-right: 5px;
             border: 2px solid;
-            border-color: #8DA1B9;
             border-width:medium;
             border-radius: 12px;
             color: white;
@@ -163,15 +181,14 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;
-            color: #7AE7C7;
+            
             font-family: Verdana, Helvetica, sans-serif;
         }
 
         h3.second
         {
             margin-top: 10px;
-            margin-bottom: 10px;
-            color: #EF959D;
+            margin-bottom: 10px;           
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -189,7 +206,6 @@
         {
              border: 4px solid;
              border-bottom: none;
-             border-color: #8DA1B9;
         }
 
          th
@@ -197,7 +213,6 @@
              border: 4px solid;
              border-top: none;
              border-bottom: none;
-             border-color: #8DA1B9;
         }
 
          img.title
@@ -207,8 +222,7 @@
 
           img.picture
          {
-             border: 3px solid;
-             border-color: #69585F;
+             border: 3px solid;           
          }
 
         table 
@@ -222,7 +236,6 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 4px solid;
-            border-color: #8DA1B9;
             border-radius: 12px;
             color: white;
             text-align: center;
