--- a/StyleMain.css
+++ b/StyleMain.css
@@ -3,11 +3,12 @@
        
          a:visited,  a:active
         {
-            color:#D8D8F6;        
+            color:#D8D8F6;  
+             background-color: #7AE7C7;      
         }
         a:hover, a:link
         {
-            color:#EF959D;
+            color:#D8D8F6;
             background-color: #7AE7C7;
             border: solid 1px;
             border-radius: 4px
@@ -17,7 +18,7 @@
             padding-left: 7px;
             padding-right: 7px;
             color: #D8D8F6;
-            background-color: #D782BA;
+            background-color: #8DA1B9;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
             text-decoration:none;
