--- a/StyleMain.css
+++ b/StyleMain.css
@@ -155,7 +155,7 @@
         h1 
         {
             margin-top: 30px;
-            color: white;
+            color: #D8D8F6;
             font-family: spaceman;
         }
 
