--- a/StyleMain.css
+++ b/StyleMain.css
@@ -4,7 +4,7 @@
          a:visited,  a:active
         {
             color:#D8D8F6;  
-             background-color: #7AE7C7;      
+             background-color: #8DA1B9;      
         }
         a:hover, a:link
         {
