--- a/StyleMain.css
+++ b/StyleMain.css
@@ -237,7 +237,7 @@
        
        img.picture
        {
-            border-color: #D782BA;
+            border-color: #7AE7C7;
        }
        h3.second 
        {
@@ -246,7 +246,7 @@
 
        input, select, textarea
        {
-           border-color: #D8D8F6;
+           border-color: #8DA1B9;
 
        }
        form
