--- a/StyleMain.css
+++ b/StyleMain.css
@@ -246,7 +246,7 @@
 
        input, select, textarea
        {
-           border-color: #8DA1B9;
+           border-color: #7AE7C7;
 
        }
        form
