--- a/StyleMain.css
+++ b/StyleMain.css
@@ -251,6 +251,7 @@
        input, select, textarea
        {
            border-color: #7AE7C7;
+           background-color: #D8D8F6;
 
        }
        form
