--- a/StyleMain.css
+++ b/StyleMain.css
@@ -4,14 +4,16 @@
             color:#D8D8F6;  
              background-color: #8DA1B9;      
         }
-        a:hover, a:link
+        
+         a:hover, a:link
         {
             color:#D8D8F6;
             background-color: #7AE7C7;
             border: solid 2px;
             border-radius: 4px
         }             
-         a 
+        
+        a 
         {
             padding-left: 7px;
             padding-right: 7px;
@@ -21,13 +23,15 @@
             font-family: Verdana, Helvetica, sans-serif;
             text-decoration:none;
         }
+       
         @font-face 
         {
             font-family: spaceman;
             src: url(fonts/SPACEMAN.ttf);
         }
 
-        p{           
+        p
+        {           
             color: #D8D8F6;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -160,8 +164,7 @@
         h2 
         {
             margin-top: 15px;
-            margin-bottom: 15px;
-            
+            margin-bottom: 15px;          
             font-family: Verdana, Helvetica, sans-serif;
         }
 
