--- a/StyleMain.css
+++ b/StyleMain.css
@@ -225,7 +225,7 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
 
-       label, h3.first
+       label, h3.first, hr
        {
             color: #D8D8F6;
        }
