--- a/StyleMain.css
+++ b/StyleMain.css
@@ -62,7 +62,7 @@
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
            background-color: #8DA1B9;
-           color: #D8D8F6;
+           color: #EF959D;
            border-radius: 8px;
            border-style:solid;
            border-color:#8DA1B9;          
@@ -75,7 +75,7 @@
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
            background-color: #8DA1B9;
-           color: #D8D8F6;
+           color: #EF959D;
            border-radius: 8px;
            border-style:solid;
            border-color:#8DA1B9;
@@ -90,14 +90,14 @@
         
         input.button1:hover
         {
-            background-color: #D8D8F6;
+            background-color: #EF959D;
             color:#8DA1B9;
             border-style:solid;
             border-color:#8DA1B9;
         }
         input.button2:hover
         {
-           background-color: #D8D8F6;
+           background-color: #EF959D;
            color:#8DA1B9;
            border-style:solid;
            border-color:#8DA1B9;           
