--- a/StyleMain.css
+++ b/StyleMain.css
@@ -61,11 +61,11 @@
         {  
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: #8DA1B9;
+           background-color: #D8D8F6;
            color: #EF959D;
            border-radius: 8px;
            border-style:solid;
-           border-color:#8DA1B9;          
+           border-color:#D8D8F6;          
            padding: 5px 7px;    
            text-align:center;
         }
@@ -74,11 +74,11 @@
         {
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: #8DA1B9;
+           background-color: #D8D8F6;
            color: #EF959D;
            border-radius: 8px;
            border-style:solid;
-           border-color:#8DA1B9;
+           border-color:#D8D8F6;
            padding: 5px 15px;
            text-align:center;
         }
@@ -91,16 +91,16 @@
         input.button1:hover
         {
             background-color: #EF959D;
-            color:#8DA1B9;
+            color:#D8D8F6;
             border-style:solid;
-            border-color:#8DA1B9;
+            border-color:#D8D8F6;
         }
         input.button2:hover
         {
            background-color: #EF959D;
-           color:#8DA1B9;
+           color:#D8D8F6;
            border-style:solid;
-           border-color:#8DA1B9;           
+           border-color:#D8D8F6;           
         }
        input
        {
