--- a/StyleMain.css
+++ b/StyleMain.css
@@ -19,6 +19,7 @@
             padding-right: 7px;
             color: #D8D8F6;
             background-color: #8DA1B9;
+            border-color: #7AE7C7;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
             text-decoration:none;
