--- a/StyleMain.css
+++ b/StyleMain.css
@@ -62,11 +62,11 @@
         {  
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: #D8D8F6;
-           color: #EF959D;
+           background-color: #8DA1B9;
+           color: #D8D8F6;
            border-radius: 8px;
            border-style:solid;
-           border-color:#D8D8F6;          
+           border-color:#7AE7C7;          
            padding: 5px 7px;    
            text-align:center;
         }
@@ -75,11 +75,11 @@
         {
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: #D8D8F6;
-           color: #EF959D;
+           background-color: #8DA1B9;
+           color: #D8D8F6;
            border-radius: 8px;
            border-style:solid;
-           border-color:#D8D8F6;
+           border-color:#7AE7C7;
            padding: 5px 15px;
            text-align:center;
         }
@@ -91,17 +91,17 @@
         
         input.button1:hover
         {
-            background-color: #EF959D;
-            color:#D8D8F6;
-            border-style:solid;
-            border-color:#D8D8F6;
+             background-color: #8DA1B9;
+           color: #7AE7C7;
+           border-style:solid;
+           border-color:#7AE7C7;
         }
         input.button2:hover
         {
-           background-color: #EF959D;
-           color:#D8D8F6;
+           background-color: #8DA1B9;
+           color: #7AE7C7;
            border-style:solid;
-           border-color:#D8D8F6;           
+           border-color:#7AE7C7;          
         }
        input
        {
