--- a/StyleMain.css
+++ b/StyleMain.css
@@ -93,15 +93,15 @@
         
         input.button1:hover
         {
-             background-color: #8DA1B9;
-           color: #7AE7C7;
+             background-color: #7AE7C7;
+           color: #D8D8F6;
            border-style:solid;
            border-color:#7AE7C7;
         }
         input.button2:hover
         {
-           background-color: #8DA1B9;
-           color: #7AE7C7;
+           background-color: #7AE7C7;
+           color: #D8D8F6;
            border-style:solid;
            border-color:#7AE7C7;          
         }
