--- a/StyleMain.css
+++ b/StyleMain.css
@@ -16,9 +16,8 @@
             padding-right: 7px;
             color: #D8D8F6;
             background-color: #8DA1B9;
-             border: solid 2px;
+             border: solid 2px #7AE7C7;
             border-radius: 4px;
-            border-color: #7AE7C7;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
             text-decoration:none;
