--- a/StyleMain.css
+++ b/StyleMain.css
@@ -156,7 +156,8 @@
 
         h1 
         {
-            margin-top: 30px;
+            margin-top: 15px;
+            margin-bottom: 15px;  
             color: #D8D8F6;
             font-family: spaceman;
         }
