--- a/StyleMain.css
+++ b/StyleMain.css
@@ -29,7 +29,9 @@
         }
 
         p
-        {           
+        {    
+            margin-top: 10px;
+            margin-bottom: 10px;         
             color: #D8D8F6;
             font-family: Verdana, Helvetica, sans-serif;
         }
