--- a/StyleMain.css
+++ b/StyleMain.css
@@ -168,7 +168,7 @@
         {
             margin-top: 15px;
             margin-bottom: 15px;          
-            font-family: Verdana, Helvetica, sans-serif;
+            font-family: spaceman;
         }
 
         h3.second
