--- a/StyleMain.css
+++ b/StyleMain.css
@@ -1,12 +1,14 @@
 ﻿       
          a:visited,  a:active
         {           
-             background-color: #8DA1B9;    
+             background-color: #8DA1B9;
+              color: #D8D8F6;   
         }
         
          a:hover, a:link
         {           
-            background-color: #7AE7C7;          
+            background-color: #7AE7C7;
+             color: #8DA1B9;          
         }             
         
         a 
@@ -93,14 +95,14 @@
         input.button1:hover
         {
              background-color: #7AE7C7;
-           color: #D8D8F6;
+           color: #8DA1B9;
            border-style:solid;
            border-color:#7AE7C7;
         }
         input.button2:hover
         {
            background-color: #7AE7C7;
-           color: #D8D8F6;
+           color: #8DA1B9;
            border-style:solid;
            border-color:#7AE7C7;          
         }
