--- a/StyleMain.css
+++ b/StyleMain.css
@@ -13,8 +13,9 @@
         
         a 
         {
-            padding: 15px;
-            padding: 15px;
+            margin-top: 2%;
+            padding-left: 7px;
+            padding-right: 7px;
             color: #D8D8F6;
             background-color: #8DA1B9;
             border: solid 2px #7AE7C7;
