--- a/StyleMain.css
+++ b/StyleMain.css
@@ -43,6 +43,7 @@
         {
             background-color: #D8D8F6;
             height: 100%;
+            align-content:center;
         }
        
         body.main 
