--- a/Style2.css
+++ b/Style2.css
@@ -32,3 +32,7 @@
         {
             background-color: #8DA1B9;
         }
+        .textAlignCenter
+        {
+            text-align:center;
+        }
