--- a/Style2.css
+++ b/Style2.css
@@ -36,3 +36,9 @@
         {
             text-align:center;
         }
+        body
+        {
+           background-image: url(images/indexbackground2b.jpg);
+           background-repeat: no-repeat;
+           background-size: cover;
+        }  
