--- a/Style2.css
+++ b/Style2.css
@@ -18,8 +18,8 @@
             color: #D8D8F6;
             background-color: #8DA1B9;
             border: solid 2px #7AE7C7;
-            border-radius: 4px;
-            font-size: large;
+            border-radius: 1px;
+            font-size: x-large;
             font-family: Verdana, Helvetica, sans-serif;
             text-decoration:none;
         }
