--- a/Style2.css
+++ b/Style2.css
@@ -1,4 +1,4 @@
-﻿  a:visited,  a:active
+﻿        a:visited,  a:active
         {           
              background-color: #8DA1B9;
               color: #D8D8F6;   
@@ -24,21 +24,21 @@
             text-decoration:none;
         }
 
-        .backgroundColor1
-        {
-            background-color: #D8D8F6;
-        }
-        .backgroundColor2
-        {
-            background-color: #8DA1B9;
-        }
-        .textAlignCenter
-        {
-            text-align:center;
-        }
-        body
+         body
         {
            background-image: url(images/indexbackground2b.jpg);
            background-repeat: no-repeat;
            background-size: cover;
         }  
+
+        .backgroundColor1{background-color: #D8D8F6;}
+        .backgroundColor2{background-color: #8DA1B9;}
+        
+        .textAlignCenter{text-align:center;}
+        .fontSpaceman{font-family:spaceman}
+             
+        @font-face 
+        {
+            font-family: spaceman;
+            src: url(fonts/SPACEMAN.ttf);
+        }
