--- a/Style2.css
+++ b/Style2.css
@@ -26,18 +26,26 @@
 
          body
         {
+            position: relative;
            background-image: url(images/indexbackground2b.jpg);
            background-repeat: no-repeat;
            background-size: cover;
-        }  
+        } 
+         
+         html, body
+         {
+            min-height: 100%;
+         } 
 
         .backgroundColor1{background-color: #D8D8F6;}
         .backgroundColor2{background-color: #8DA1B9;}
         
         .textAlignCenter{text-align:center;}
         .fontSpaceman{font-family:spaceman}
-             
-        @font-face 
+        
+        .overlay{position:absolute; top: 0; left:0; width: 100%; height:100%; z-index: 10;}     
+       
+         @font-face 
         {
             font-family: spaceman;
             src: url(fonts/SPACEMAN.ttf);
