--- a/Style2.css
+++ b/Style2.css
@@ -39,6 +39,9 @@
 
         .backgroundColor1{background-color: #D8D8F6;}
         .backgroundColor2{background-color: #8DA1B9;}
+
+         .color1{color: #D8D8F6;}
+        .color2{color: #7AE7C7;}
         
         .textAlignCenter{text-align:center;}
         .fontSpaceman{font-family:spaceman}
