--- a/Style2.css
+++ b/Style2.css
@@ -46,7 +46,7 @@
         .textAlignCenter{text-align:center;}
         .fontSpaceman{font-family:spaceman}
         
-        .overlay{position:absolute; top: 0; left:0; width: 100%; height:100%; z-index: 10;}     
+        .overlay{position:fixed; top: 0; left:0; width: 100%; height:100%; z-index: 1; overflow-x: hidden; padding-top: 60px; transition: 0.5s;}     
        
          @font-face 
         {
