--- a/Style2.css
+++ b/Style2.css
@@ -12,7 +12,8 @@
         
         a 
         {
-            margin-top: 5%;
+            margin-top: 10px;
+            margin-top: 10px;
             padding-left: 7px;
             padding-right: 7px;
             color: #D8D8F6;
