--- a/Style2.css
+++ b/Style2.css
@@ -63,7 +63,7 @@
 
         
         
-        .overlay{position:fixed; top: 0; left:0; width: 100%; height:100%; z-index: 1; overflow-x: hidden; padding-top: 60px; transition: 0.5s;}     
+        .overlay{position:fixed; top: 0; left:0; height:100%; z-index: 1; overflow: auto; padding-top: 60px; transition: 0.5s;}     
        
          @font-face 
         {
