--- a/Style2.css
+++ b/Style2.css
@@ -29,8 +29,8 @@
         {
              display:block;
              text-decoration:none;         
-             margin-left:5%;
-             margin-right:5%;
+             margin-left:5px;
+             margin-right:5px;
         }
 
         ul
