--- a/Style2.css
+++ b/Style2.css
@@ -57,7 +57,7 @@
         .backgroundColor2{background-color: #8DA1B9;}
 
          .color1{color: #D8D8F6; font-size:xx-large;}
-        .color2{color: #7AE7C7; font-size:xx-large;}
+        .color2{color: #7AE7C7; font-size:15px;}
         
         .textAlignCenter{text-align:center;}
         .fontSpaceman{font-family:spaceman}
