--- a/Style2.css
+++ b/Style2.css
@@ -37,7 +37,9 @@
         {
             list-style-type: none;
             margin: 0;
-            padding: 0;          
+            padding: 0;
+            border: solid 5px;
+            border-color: #8DA1B9;          
         }
 
          body
