--- a/Style2.css
+++ b/Style2.css
@@ -29,8 +29,8 @@
         {
              display:block;
              text-decoration:none;         
-             margin-left:5px;
-             margin-right:5px;
+             margin-left:10px;
+             margin-right:10px;
         }
 
         ul
@@ -38,7 +38,8 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            border: solid 5px;
+            border-style: solid;
+            border-width: 10px;
             border-color: #8DA1B9;          
         }
 
