--- a/Style2.css
+++ b/Style2.css
@@ -35,12 +35,13 @@
 
         ul
         {
+            background-image: url(images/transparency.png);
             list-style-type: none;
             margin: 0;
             padding: 0;
             border-style: solid;
             border-width: 5px;
-            border-color: #8DA1B9;          
+            border-color: #7AE7C7;          
         }
 
          body
