--- a/Style2.css
+++ b/Style2.css
@@ -36,6 +36,7 @@
         ul
         {
             background-image: url(images/transparency.png);
+            background-size: cover;
             list-style-type: none;
             margin: 0;
             padding: 0;
