--- a/Style2.css
+++ b/Style2.css
@@ -52,6 +52,43 @@
            background-repeat: no-repeat;
            background-size: cover;
         } 
+
+          table 
+        {
+            background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-left: auto;
+            margin-right: auto;
+            width: 1024px;
+            padding-left: 15px;
+            padding-right: 15px;
+            border: 4px solid;
+            border-radius: 12px;
+            color: white;
+            text-align: center;
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+
+           form 
+        {
+            background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 25px;
+            width: 800px;
+            padding-left: 5px;
+            padding-right: 5px;
+            border: 2px solid;
+            border-width:medium;
+            border-radius: 12px;
+            color: white;
+            text-align: center;
+            font-family: Verdana, Helvetica, sans-serif;
+            border-color: #7AE7C7;
+        }      
          
          html, body
          {
