--- a/Style2.css
+++ b/Style2.css
@@ -102,7 +102,8 @@
         .color2{color: #7AE7C7; font-size:15px;}
         
         .textAlignCenter{text-align:center;}
-        .fontSpaceman{font-family:spaceman}
+        .fontSpaceman{font-family:spaceman;}
+         .fontMain{font-family:Verdana, Helvetica, sans-serif;}
 
         
         
