--- a/Style2.css
+++ b/Style2.css
@@ -51,6 +51,7 @@
            background-image: url(images/indexbackground2b.jpg);
            background-repeat: no-repeat;
            background-size: cover;
+           position:fixed;
         } 
 
           table 
