--- a/Style2.css
+++ b/Style2.css
@@ -25,6 +25,12 @@
            
         }
 
+         hr
+       {
+           border: 1px solid #D8D8F6;
+           width: 90%;
+       }
+
         li, a
         {
              display:block;
