--- a/Style2.css
+++ b/Style2.css
@@ -57,6 +57,7 @@
            background-image: url(images/indexbackground2b.jpg);
            background-repeat: no-repeat;
            background-size: cover;
+           background-attachment: fixed;
         } 
 
           table 
