--- a/Style2.css
+++ b/Style2.css
@@ -31,6 +31,7 @@
            width: 90%;
        }
 
+
         li, a
         {
              display:block;
@@ -104,6 +105,7 @@
 
         .backgroundColor1{background-color: #D8D8F6;}
         .backgroundColor2{background-color: #8DA1B9;}
+        .backgroundTransparent{background-image: url(images/transparency.png);}
 
          .color1{color: #D8D8F6;}
         .color2{color: #7AE7C7;}
