--- a/Style2.css
+++ b/Style2.css
@@ -24,7 +24,24 @@
             font-family: Verdana, Helvetica, sans-serif;
            
         }
+        
+          td
+        {
+             border: 4px solid;
+             border-bottom: none;
+        }
 
+         th
+         {
+             border: 4px solid;
+             border-top: none;
+             border-bottom: none;
+        }
+       
+          img.picture
+         {
+             border: 3px solid;           
+         }
         label, h3.first
        {
             color: #D8D8F6;
