--- a/Style2.css
+++ b/Style2.css
@@ -142,6 +142,85 @@
             border-color: #7AE7C7;
         }      
          
+            input.button1
+        {  
+           font-size:larger;
+           background-color: #8DA1B9;
+           color: #D8D8F6;
+           border-radius: 8px;
+           border-style:solid;
+           border-color:#7AE7C7;          
+           padding: 5px 7px;    
+           text-align:center;
+        }
+         
+        input.button2
+        {
+           font-size:larger;
+           background-color: #8DA1B9;
+           color: #D8D8F6;
+           border-radius: 8px;
+           border-style:solid;
+           border-color:#7AE7C7;
+           padding: 5px 15px;
+           text-align:center;
+        }
+
+        a, input.button1, input.button2 
+        {
+        -webkit-transition-duration: 0.4s;       
+        }
+        label
+        {
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+        
+        input.button1:hover
+        {
+             background-color: #7AE7C7;
+           color: #8DA1B9;
+           border-style:solid;
+           border-color:#7AE7C7;
+        }
+        input.button2:hover
+        {
+           background-color: #7AE7C7;
+           color: #8DA1B9;
+           border-style:solid;
+           border-color:#7AE7C7;          
+        }
+       input
+       {
+           margin-left: auto;
+           margin-right: auto;
+           border-bottom-style: solid;
+           border-width: medium;
+           font-family: Verdana, Helvetica, sans-serif;       
+        }
+        input.radial
+        {
+           margin-left: 5px;
+           margin-right: 15px; 
+        }
+        
+        select
+       {
+           margin-left: 5px;
+           margin-right: 5px;
+           font-family: Verdana, Helvetica, sans-serif;
+           border-bottom-style: solid;
+           border-width: medium;
+       }
+
+       textarea
+       {
+           margin-left:auto;
+           margin-right:auto;
+           width: 90%;
+           border-bottom-style: solid;
+           border-width: medium;
+           font-family: Verdana, Helvetica, sans-serif; 
+       }      
          html, body
          {
             min-height: 100%;
