--- a/Style2.css
+++ b/Style2.css
@@ -86,7 +86,7 @@
 
         ul
         {
-            background-image: url(images/transparency.png);
+            background-image: url(images/transparencyBar.png);
             background-size: cover;
             list-style-type: none;
             margin: 0;
