--- a/Style2.css
+++ b/Style2.css
@@ -86,7 +86,7 @@
 
         ul
         {
-            background-image: url(images/transparencyBar.png);
+            background-image: url(images/transparency.png);
             background-size: cover;
             list-style-type: none;
             margin: 0;
@@ -228,7 +228,7 @@
 
         .backgroundColor1{background-color: #D8D8F6;}
         .backgroundColor2{background-color: #8DA1B9;}
-        .backgroundTransparent{background-image: url(images/transparency.png);}
+        .backgroundTransparent{background-image: url(images/transparencyBar.png);}
 
          .color1{color: #D8D8F6;}
         .color2{color: #7AE7C7;}
