--- a/Style2.css
+++ b/Style2.css
@@ -47,7 +47,7 @@
             color: #D8D8F6;
        }
 
-       td, th, table
+       td, th, table, tr
        {
            border-color: #7AE7C7;
        }  
