--- a/Style2.css
+++ b/Style2.css
@@ -13,14 +13,12 @@
         a 
         {           
             margin-top: 10px;
-            margin-bottom: 10px;
-            padding-left: 7px;
-            padding-right: 7px;
+            margin-bottom: 10px;          
             color: #D8D8F6;
             background-color: #8DA1B9;
             border: solid 2px #7AE7C7;
             border-radius: 1px;
-            font-size: larger;
+            font-size: x-large;
             font-family: Verdana, Helvetica, sans-serif;
            
         }
