--- a/Style2.css
+++ b/Style2.css
@@ -11,7 +11,7 @@
              color: #8DA1B9;          
         }             
         
-        a,  a:visited 
+        a 
         {           
             margin-top: 10px;
             margin-bottom: 10px;          
