--- a/Style2.css
+++ b/Style2.css
@@ -1,7 +1,7 @@
 ﻿       a.active
         {           
-              background-color: #7AE7C7;
-             color: #8DA1B9;
+              background-color: #8DA1B9;
+             color: #EF959D;
              border-color: #EF959D;  
         }
         
