--- a/Style2.css
+++ b/Style2.css
@@ -1,7 +1,7 @@
 ﻿       a.active
         {           
               background-color: #8DA1B9;
-             color: #EF959D;
+             color: #D8D8F6;
              border-color: #EF959D;  
         }
         
