--- a/Style2.css
+++ b/Style2.css
@@ -20,7 +20,7 @@
             border: solid 2px #7AE7C7;
             border-radius: 1px;
             font-size: larger;
-            font-family: Verdana, Helvetica, sans-serif;
+            font-family: audimat, Verdana, Helvetica, sans-serif;
            
         }
         
