--- a/Style2.css
+++ b/Style2.css
@@ -19,7 +19,7 @@
             background-color: #8DA1B9;
             border: solid 2px #7AE7C7;
             border-radius: 1px;
-            font-size: larger;
+            font-size: x-large;
             font-family: audimat, Verdana, Helvetica, sans-serif;
            
         }
