--- a/Style2.css
+++ b/Style2.css
@@ -113,6 +113,7 @@
             text-align: center;
             font-family: audimat, Verdana, Helvetica, sans-serif;
             border-color: #7AE7C7;
+             font-size:large;
         }      
          
             input.button1
@@ -150,7 +151,7 @@
         
         input.button1:hover
         {
-             background-color: #7AE7C7;
+           background-color: #7AE7C7;
            color: #8DA1B9;
            border-style:solid;
            border-color:#7AE7C7;
