--- a/Style2.css
+++ b/Style2.css
@@ -36,7 +36,13 @@
              border-top: none;
              border-bottom: none;
         }
-       
+        p
+        {    
+            margin-top: 10px;
+            margin-bottom: 10px;         
+            color: #D8D8F6;
+            font-family: audimat, Verdana, Helvetica, sans-serif;
+        }
           img.picture
          {
              border: 3px solid;           
