--- a/Style2.css
+++ b/Style2.css
@@ -42,6 +42,7 @@
             margin-bottom: 5px;         
             color: #D8D8F6;
             font-family: audimat, Verdana, Helvetica, sans-serif;
+            font-size:medium;
         }
         h3
         {
