--- a/Style2.css
+++ b/Style2.css
@@ -42,7 +42,7 @@
             margin-bottom: 15px;         
             color: #D8D8F6;
             font-family: audimat, Verdana, Helvetica, sans-serif;
-            font-size:xx-large;
+            font-size:x-large;
         }
         h3
         {
