--- a/Style2.css
+++ b/Style2.css
@@ -42,7 +42,7 @@
             margin-bottom: 15px;         
             color: #D8D8F6;
             font-family: audimat, Verdana, Helvetica, sans-serif;
-            font-size:x-large;
+            font-size:larger;
         }
         h3
         {
@@ -59,6 +59,14 @@
            border: 1px solid #D8D8F6;
            width: 90%;
        }
+
+         header
+         {
+          border-top: 1px solid #D8D8F6;
+          border-bottom: 1px solid #D8D8F6;
+           width: 90%;
+
+         }
 
 
         li, a
