--- a/Style2.css
+++ b/Style2.css
@@ -65,6 +65,7 @@
           border-top: 1px solid #D8D8F6;
           border-bottom: 1px solid #D8D8F6;
           width: 80%;
+          text-align:center;
 
          }
 
