--- a/Style2.css
+++ b/Style2.css
@@ -246,7 +246,7 @@
 
         .backgroundColor1{background-color: #D8D8F6;}
         .backgroundColor2{background-color: #8DA1B9;}
-        .backgroundTransparent{background-image: url(images/transparencyBar.png); background-repeat: no-repeat; background-size: cover;}
+        .backgroundTransparent{background-image: url(images/transparencyBar.png); background-repeat: no-repeat; background-size: 100% 100%;}
         .backgroundTransparent{background-image: url(images/transparencyBarPlain.png); background-repeat: no-repeat; background-size: cover;}
 
          .color1{color: #D8D8F6;}
