--- a/Style2.css
+++ b/Style2.css
@@ -58,6 +58,8 @@
        {
            border: 2px solid #EF959D;
            width: 95%;
+           color:  #EF959D;
+           background-color: #EF959D;
        }
 
         header{
