--- a/Style2.css
+++ b/Style2.css
@@ -56,10 +56,10 @@
       
          hr
        {
-           border: 1px solid #EF959D;
+           border: 2px solid #D8D8F6;
            width: 95%;
-           color:  #EF959D;
-           background-color: #EF959D;
+           color:  #D8D8F6;
+           background-color: #D8D8F6;
        }
 
         header{
