--- a/Style2.css
+++ b/Style2.css
@@ -101,7 +101,8 @@
 
          footer
          {
-            position: relative;
+            
+            position: fixed;
             float: right;
          }
           table 
