--- a/Style2.css
+++ b/Style2.css
@@ -102,7 +102,8 @@
          footer
          {      
             float: right;
-              position: fixed;
+            bottom: 0;
+              position: absolute;
          }
           table 
         {
